DEV-4082 - add visibility hidden to carousel items that are out of view to prevent tabbing (#8)

--- a/src/tiny-slider.scss
+++ b/src/tiny-slider.scss
@@ -13,6 +13,12 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    transition: visibility 1s 0s linear;
+
+    &:not(.tns-slide-active) {
+      visibility: hidden;
+      transition-delay: 1s;
+    }
   }
 }
 
